cn/snowskystudio/newgame/test/error/NetworkConnectionIndexOutOfRange.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class NetworkConnectionIndexOutOfRange(BaseError):
    TYPE = "NetworkConnectionIndexOutOfRange"
